fix(signature): modify signature to take on a white color when dark mode is activated

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -886,3 +886,7 @@ img {
     max-height: 60px;
     opacity: 0.85;
   }
+
+  body.dark-theme .signature-image {
+    filter: brightness(0) invert(1);
+  }
